--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+   
+<head>
+<title>Jogo de espaço</title>
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="style.css"/>
+<script type="text/javascript" type="text/css" src="script.js"></script>
 
+    </head>
+<body>
+   
+<div id="painel">
+    Planeta
+<div id="medidorPaneta">
+<div id="barraPlaneta"> </div>
+</div>
+<div id="contBombas"></div>
+</div>
+<div id="telaMsg" class="telaMsg">
+
+    <button id="btnJogar" class="btnJogar">Jogar</button>
+</div>
+
+<img id="naveJog"  class="naveJog"   src="nave.gif" alt="">
+
+</body>
+</html>
