--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button id="btnJogar" class="btnJogar">Jogar</button>
 </div>
 
-<img id="naveJog"  class="naveJog"   src="nave.gif" alt="">
+<img id="naveJog"  class="naveJog"   src="imagens/nave.gif" alt="">
 
 </body>
 </html>
